--- a/react-router-dom-example/src/index.css
+++ b/react-router-dom-example/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.active {
+  background-color: tomato;
+  text-decoration: none;
+}
